# spO2-modelling

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Saturday, February 21, 2026.csv  TODO.md  railway.toml  spo2_hill_model.py
backend/: alembic.ini  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/migrations/: env.py
backend/app/models/: db_models.py  schemas.py
backend/app/routers/: analysis.py  bounds.py  fit.py  holds.py  models.py  sessions.py
backend/app/services/: analysis.py  csv_parser.py  fitter.py  hill_model.py  model_manager.py
backend/scripts/: compare_new_model.py  compare_odc.py  compare_v4_model.py  cross_predict.py  cross_predict_partial.py  cross_predict_partial_v4.py  cross_predict_v4.py  exp_v5_01_filter_only.py  exp_v5_02_delay_filter.py  exp_v5_03_recovery.py  exp_v5_04_global_sensor.py  exp_v5_05_beat_sensor.py  exp_v6_01_global_recovery.py  exp_v6_02_structural.py  exp_v6_03_nadir.py  exp_v6_04_results.txt  exp_v6_04_stabilize.py  exp_v6_05_kernel.py  exp_v6_06_results.txt  exp_v6_06_sensor_first.py  global_fit_v4.py
backend/scripts/archive/: compare_new_model.py  compare_odc.py  compare_v4_model.py  cross_predict.py  cross_predict_partial.py  cross_predict_partial_v4.py  cross_predict_v4.py  global_fit_v4.py
backend/scripts/exp_v6_01/: exp_v6_01_global_recovery.py
backend/scripts/exp_v6_02/: exp_v6_02_structural.py
backend/scripts/exp_v6_03/: exp_v6_03_nadir.py  exp_v6_03_results.txt
backend/tests/: conftest.py  test_csv_parser.py  test_hill_model.py
docs/: model-design.md  (+1 more)
(+71 files in other folders)
