[project]
name = "spo2-modelling"
version = "0.1.0"
description = "SpO2 desaturation modelling webapp — Severinghaus ODC fits for breath-hold apnea"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "scipy>=1.14.0",
    "numpy>=2.1.0",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"app/routers/*.py" = ["B008"]  # Depends() and Query() in FastAPI function defaults

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
